// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BodyText /> renders correctly 1`] = `
<DocumentFragment>
  <p
    class="text-black text-sm tablet:text-base "
    data-testid="paragraph"
  >
    Testing
  </p>
</DocumentFragment>
`;

exports[`<BodyText /> renders correctly default size and bold 1`] = `
<DocumentFragment>
  <p
    class="text-black text-sm tablet:text-base font-bold "
    data-testid="paragraph"
  >
    Testing
  </p>
</DocumentFragment>
`;

exports[`<BodyText /> renders correctly small 1`] = `
<DocumentFragment>
  <p
    class="text-black text-xs tablet:text-base "
    data-testid="paragraph"
  >
    Testing
  </p>
</DocumentFragment>
`;

exports[`<BodyText /> renders correctly small and bold 1`] = `
<DocumentFragment>
  <p
    class="text-black text-xs tablet:text-base font-bold "
    data-testid="paragraph"
  >
    Testing
  </p>
</DocumentFragment>
`;

exports[`<BodyText /> renders correctly with html alternative attributes 1`] = `
<DocumentFragment>
  <p
    class="text-black text-sm tablet:text-base "
    data-testid="paragraph"
    tabindex="0"
  >
    Testing
  </p>
</DocumentFragment>
`;
